dark mode: more style fixes

--- a/src/web_interface/static/css/line_numbering.css
+++ b/src/web_interface/static/css/line_numbering.css
@@ -1,7 +1,3 @@
-#preview-div pre{
-  border: 1px solid white;
-}
-
 #preview-div pre .line-number {
   color:black;
   display:block;;
